Fixes dark mode svg background

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -541,11 +541,6 @@ ul.navbar-nav li.nav-item.active>a.active {
   background-color: #383838;
 }
 
-table.table svg,
-table.table .pie-chart circle {
-  background-color: #0d1117;
-}
-
 .pie-chart circle {
   fill: #121212 !important;
 }
